fixed nav bar vanishing on mobile

--- a/src/app/styles/_carousel.scss
+++ b/src/app/styles/_carousel.scss
@@ -175,6 +175,6 @@
   }
 
   .embla__buttons {
-    left: 7.6rem;
+    left: 3.6rem;
   }
 }
